--- a/home.html
+++ b/home.html
@@ -176,7 +176,8 @@
         </div>
       </div>
     </main>
-
+    
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
