--- a/input_nilai.html
+++ b/input_nilai.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Input Nilai Penilaian - SPK Toko Buah Segar Manis</title>
+    <title>Data Penjualan - SPK Toko Buah Segar Manis</title>
     <link
       rel="icon"
       href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🍎</text></svg>"
@@ -42,10 +42,6 @@
         </a>
         <a href="proses_saw.html" class="nav-item">
           <span class="icon">🧮</span>
-          <span>Skor Produk</span>
-        </a>
-        <a href="proses_saw.html" class="nav-item">
-          <span class="icon">📈</span>
           <span>Perhitungan SAW</span>
         </a>
         <a href="laporan.html" class="nav-item">
@@ -71,7 +67,11 @@
       <!-- Top Bar -->
       <header class="topbar">
         <div class="search-box">
-          <input type="text" placeholder="Cari produk..." id="searchNilai" />
+          <input
+            type="text"
+            placeholder="Cari produk, laporan..."
+            id="searchNilai"
+          />
           <span class="search-icon">🔍</span>
         </div>
 
@@ -96,12 +96,25 @@
       <div class="dashboard-content">
         <div class="page-header">
           <div>
-            <h1>Input Nilai Penilaian</h1>
-            <p>Kelola data nilai penilaian produk berdasarkan kriteria</p>
+            <h1>Data Penjualan</h1>
+            <p>Kelola data penjualan produk</p>
           </div>
-          <button class="btn-primary" onclick="openModal()">
-            <span>➕</span> Tambah Nilai
-          </button>
+          <div style="display: flex; gap: 10px">
+            <input
+              type="text"
+              placeholder="Cari penjualan..."
+              id="searchPenjualan"
+              style="
+                padding: 10px 15px;
+                border: 1px solid #e0e0e0;
+                border-radius: 8px;
+                width: 250px;
+              "
+            />
+            <button class="btn-primary" onclick="openModal()">
+              <span>➕</span> Tambah Data
+            </button>
+          </div>
         </div>
 
         <!-- Info Box -->
@@ -112,32 +125,23 @@
 
         <!-- Table Card -->
         <div class="table-card">
-          <div class="table-header">
-            <h3>Daftar Penilaian Produk</h3>
-            <div class="table-actions">
-              <select id="filterKategori" class="filter-select">
-                <option value="">Semua Produk</option>
-              </select>
-            </div>
-          </div>
-
           <div class="table-responsive">
             <table class="data-table">
               <thead>
                 <tr>
-                  <th>No</th>
-                  <th>Nama Produk</th>
-                  <th id="headerC1">C1</th>
-                  <th id="headerC2">C2</th>
-                  <th id="headerC3">C3</th>
-                  <th id="headerC4">C4</th>
-                  <th id="headerC5">C5</th>
+                  <th>Produk</th>
+                  <th>Bulan</th>
+                  <th>Tahun</th>
+                  <th>Kuantitas (C1)</th>
+                  <th>Pendapatan (C2)</th>
+                  <th>Margin % (C3)</th>
+                  <th>Kerusakan % (C5)</th>
                   <th>Aksi</th>
                 </tr>
               </thead>
               <tbody id="nilaiTableBody">
                 <tr>
-                  <td colspan="9" class="text-center">Loading...</td>
+                  <td colspan="8" class="text-center">Loading...</td>
                 </tr>
               </tbody>
             </table>
@@ -150,24 +154,117 @@
     <div id="modalNilai" class="modal">
       <div class="modal-content">
         <div class="modal-header">
-          <h2 id="modalTitle">Tambah Nilai Penilaian</h2>
+          <h2 id="modalTitle">Tambah Data Penjualan</h2>
           <button class="modal-close" onclick="closeModal()">&times;</button>
         </div>
 
         <form id="formNilai">
           <input type="hidden" id="isEdit" value="false" />
 
-          <div class="form-group">
-            <label for="produkId"
-              >Pilih Produk <span class="required">*</span></label
-            >
-            <select id="produkId" required>
-              <option value="">-- Pilih Produk --</option>
-            </select>
+          <div class="form-row">
+            <div class="form-group">
+              <label for="produkId"
+                >Pilih Produk <span class="required">*</span></label
+              >
+              <select id="produkId" required>
+                <option value="">-- Pilih Produk --</option>
+              </select>
+            </div>
+
+            <div class="form-group">
+              <label for="bulan">Bulan <span class="required">*</span></label>
+              <select id="bulan" required>
+                <option value="">-- Pilih Bulan --</option>
+                <option value="Januari">Januari</option>
+                <option value="Februari">Februari</option>
+                <option value="Maret">Maret</option>
+                <option value="April">April</option>
+                <option value="Mei">Mei</option>
+                <option value="Juni">Juni</option>
+                <option value="Juli">Juli</option>
+                <option value="Agustus">Agustus</option>
+                <option value="September">September</option>
+                <option value="Oktober">Oktober</option>
+                <option value="November">November</option>
+                <option value="Desember">Desember</option>
+              </select>
+            </div>
           </div>
 
-          <div id="kriteriaInputs">
-            <!-- Kriteria inputs will be dynamically loaded here -->
+          <div class="form-row">
+            <div class="form-group">
+              <label for="tahun">Tahun <span class="required">*</span></label>
+              <input
+                type="number"
+                id="tahun"
+                required
+                placeholder="2025"
+                min="2020"
+                max="2030"
+              />
+            </div>
+
+            <div class="form-group">
+              <label for="kuantitas"
+                >Kuantitas <span class="required">*</span></label
+              >
+              <input
+                type="number"
+                id="kuantitas"
+                required
+                placeholder="0 unit"
+                min="0"
+                step="1"
+              />
+            </div>
+          </div>
+
+          <div class="form-group">
+            <label for="pendapatan"
+              >Pendapatan (Rp) - C2 <span class="required">*</span></label
+            >
+            <input
+              type="number"
+              id="pendapatan"
+              required
+              placeholder="0"
+              min="0"
+              step="1000"
+            />
+          </div>
+
+          <div class="form-row">
+            <div class="form-group">
+              <label for="margin"
+                >Margin Keuntungan (%) - C3 <span class="required">*</span></label
+              >
+              <input
+                type="number"
+                id="margin"
+                required
+                placeholder="Contoh: 25"
+                min="0"
+                max="100"
+                step="0.1"
+              />
+              <small style="color: #666;">Persentase keuntungan dari penjualan</small>
+            </div>
+
+            <div class="form-group">
+              <label for="kerusakan"
+                >Tingkat Kerusakan (%) - C5 <span class="required">*</span></label
+              >
+              <input
+                type="number"
+                id="kerusakan"
+                required
+                placeholder="Contoh: 5"
+                min="0"
+                max="100"
+                step="0.1"
+              />
+              <small style="color: #666;">Persentase produk rusak/busuk (semakin kecil semakin baik)</small>
+            </div>
           </div>
 
           <div class="modal-footer">
