--- a/proses_saw.html
+++ b/proses_saw.html
@@ -4,152 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Perhitungan SAW - SPK Toko Buah Segar Manis</title>
-    <link
-      rel="icon"
-      href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🍎</text></svg>"
-    />
+    <link rel="icon" type="image/png" href="asset/images/logo.png" />
     <link rel="stylesheet" href="css/style.css" />
-    <style>
-      .saw-section {
-        background: white;
-        border-radius: 12px;
-        padding: 20px;
-        margin-bottom: 20px;
-        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-      }
-      .saw-section h3 {
-        margin-bottom: 15px;
-        color: #333;
-        border-bottom: 2px solid #4caf50;
-        padding-bottom: 10px;
-      }
-      .matrix-table {
-        width: 100%;
-        border-collapse: collapse;
-        font-size: 14px;
-      }
-      .matrix-table th,
-      .matrix-table td {
-        border: 1px solid #ddd;
-        padding: 10px;
-        text-align: center;
-      }
-      .matrix-table th {
-        background: #4caf50;
-        color: white;
-      }
-      .matrix-table tr:nth-child(even) {
-        background: #f9f9f9;
-      }
-      .matrix-table tr:hover {
-        background: #f1f1f1;
-      }
-      .ranking-1 {
-        background: #ffd700 !important;
-        font-weight: bold;
-      }
-      .ranking-2 {
-        background: #c0c0c0 !important;
-      }
-      .ranking-3 {
-        background: #cd7f32 !important;
-        color: white;
-      }
-      .btn-calculate {
-        background: linear-gradient(135deg, #4caf50, #45a049);
-        color: white;
-        border: none;
-        padding: 12px 30px;
-        border-radius: 8px;
-        cursor: pointer;
-        font-size: 16px;
-        display: flex;
-        align-items: center;
-        gap: 8px;
-      }
-      .btn-calculate:hover {
-        transform: translateY(-2px);
-        box-shadow: 0 4px 12px rgba(76, 175, 80, 0.4);
-      }
-      .info-box {
-        background: #e3f2fd;
-        border-left: 4px solid #2196f3;
-        padding: 15px;
-        margin-bottom: 20px;
-        border-radius: 0 8px 8px 0;
-      }
-      .info-box h4 {
-        margin: 0 0 10px 0;
-        color: #1976d2;
-      }
-      .info-box ul {
-        margin: 0;
-        padding-left: 20px;
-      }
-      .kriteria-badge {
-        display: inline-block;
-        padding: 4px 8px;
-        border-radius: 4px;
-        font-size: 12px;
-        font-weight: bold;
-      }
-      .badge-benefit {
-        background: #e8f5e9;
-        color: #2e7d32;
-      }
-      .badge-cost {
-        background: #ffebee;
-        color: #c62828;
-      }
-      .result-highlight {
-        font-size: 24px;
-        font-weight: bold;
-        color: #4caf50;
-      }
-      .step-indicator {
-        display: flex;
-        justify-content: center;
-        gap: 10px;
-        margin-bottom: 30px;
-      }
-      .step {
-        display: flex;
-        align-items: center;
-        gap: 8px;
-        padding: 10px 20px;
-        background: #f5f5f5;
-        border-radius: 20px;
-        font-size: 14px;
-      }
-      .step.active {
-        background: #4caf50;
-        color: white;
-      }
-      .step-number {
-        width: 24px;
-        height: 24px;
-        border-radius: 50%;
-        background: white;
-        color: #333;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font-weight: bold;
-      }
-      .step.active .step-number {
-        background: white;
-        color: #4caf50;
-      }
-    </style>
   </head>
   <body class="dashboard-body">
     <!-- Sidebar -->
     <aside class="sidebar">
       <div class="sidebar-header">
         <div class="logo">
-          <div class="logo-icon">🍎</div>
+          <div class="logo-icon">
+            <img
+              src="asset/images/logo.png"
+              alt="Logo"
+              style="width: 100%; height: 100%; object-fit: contain"
+            />
+          </div>
           <div class="logo-text">
-            <h3>Segar Manis</h3>
+            <h3>Buah Segar Manis</h3>
             <p>Bogor</p>
           </div>
         </div>
@@ -180,11 +51,7 @@
           <span class="icon">📄</span>
           <span>Laporan</span>
         </a>
-        <a href="master_data.html" class="nav-item">
-          <span class="icon">👤</span>
-          <span>Pengguna</span>
-        </a>
-      </nav>
+              </nav>
 
       <div class="sidebar-footer">
         <button class="toggle-menu" onclick="toggleSidebar()">
@@ -194,28 +61,29 @@
       </div>
     </aside>
 
+    <!-- Sidebar Overlay for Mobile -->
+    <div class="sidebar-overlay" onclick="closeMobileSidebar()"></div>
+
     <!-- Main Content -->
     <main class="main-content">
       <!-- Top Bar -->
       <header class="topbar">
-        <div class="search-box">
-          <input type="text" placeholder="Cari..." disabled />
-          <span class="search-icon">🔍</span>
+        <button class="mobile-menu-btn" onclick="toggleMobileSidebar()">☰</button>
+        <div class="topbar-title">
+          <h2>Perhitungan SAW</h2>
         </div>
 
         <div class="topbar-right">
-          <div class="notification">
-            <span class="icon">🔔</span>
-            <span class="badge">3</span>
-          </div>
-
-          <div class="user-profile">
+          <div class="user-profile" onclick="toggleUserDropdown()">
             <div class="avatar">A</div>
             <div class="user-info">
               <span class="user-name" id="userName">Administrator</span>
               <span class="user-role">Administrator</span>
             </div>
-            <button class="logout-btn" onclick="handleLogout()">▼</button>
+            <button class="logout-btn">▼</button>
+            <div class="user-dropdown" id="userDropdown">
+              <a href="#" onclick="handleLogout(); return false;">Keluar</a>
+            </div>
           </div>
         </div>
       </header>
@@ -239,12 +107,17 @@
             <li><strong>Langkah 1:</strong> Menentukan kriteria dan bobot</li>
             <li><strong>Langkah 2:</strong> Membuat matriks keputusan</li>
             <li>
-              <strong>Langkah 3:</strong> Normalisasi matriks (Benefit: nilai/max, Cost: min/nilai)
+              <strong>Langkah 3:</strong> Normalisasi matriks (Benefit:
+              nilai/max, Cost: min/nilai)
             </li>
             <li>
-              <strong>Langkah 4:</strong> Menghitung nilai preferensi (V = bobot x normalisasi)
+              <strong>Langkah 4:</strong> Menghitung nilai preferensi (V = bobot
+              x normalisasi)
             </li>
-            <li><strong>Langkah 5:</strong> Perankingan berdasarkan nilai preferensi</li>
+            <li>
+              <strong>Langkah 5:</strong> Perankingan berdasarkan nilai
+              preferensi
+            </li>
           </ul>
         </div>
 
@@ -286,7 +159,9 @@
               </thead>
               <tbody id="matrixBody">
                 <tr>
-                  <td colspan="6">Klik "Hitung SAW" untuk memulai perhitungan</td>
+                  <td colspan="6">
+                    Klik "Hitung SAW" untuk memulai perhitungan
+                  </td>
                 </tr>
               </tbody>
             </table>
@@ -362,25 +237,6 @@
           .toUpperCase();
       }
 
-      // Logout
-      async function handleLogout() {
-        if (!confirm("Apakah Anda yakin ingin logout?")) return;
-        try {
-          await fetch("api/logout_api.php", { method: "POST" });
-        } catch (e) {}
-        sessionStorage.clear();
-        window.location.href = "login.html";
-      }
-
-      // Toggle sidebar
-      function toggleSidebar() {
-        const sidebar = document.querySelector(".sidebar");
-        const mainContent = document.querySelector(".main-content");
-        sidebar.classList.toggle("collapsed");
-        mainContent.style.marginLeft = sidebar.classList.contains("collapsed")
-          ? "70px"
-          : "250px";
-      }
     </script>
   </body>
 </html>
